user management changes
